So… The finish come on...

--- a/views/home.haml
+++ b/views/home.haml
@@ -1,9 +1,27 @@
-:sass
-  .text
-    background-color: white
-    opacity: 0.5
-    border-radius: 10px
-    padding: 10px
+#box
+  %p
+    En 1996, Jean-Jacques Rey travaille dans le tourisme.
+    %br
+    Il a l’idée d’une course en 4L dans le désert et se rend au Maroc pour étudier la faisabilité d’un Raid dans ce pays. La 4L passe partout et c’est ainsi qu’est né le 4L Trophy. Avec son entreprise Desertours il motive des étudiants pour cette épreuve.
 
-%p.text
-  Salut Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
+  %p
+    A la fin du mois de février 1997 trois équipes sont au départ. Accompagnées en assistance par un 4x4, un logisticien, un mécano, un médecin.
+    %br
+    Grâce au soutien des étudiants de l’ESC Rennes, la course prend peu à peu forme. Lors de la quatrième édition en 2001, 50 voitures sont au départ. Et en 2005 ce sont 460 véhicules qui sont présents au rendez-vous.
+
+  %p
+    C’est en 2008 que la barre des 1000 voitures engagées au départ est atteinte. Le 4L Trophy a dersormais une grande renommée.
+
+  %p
+    En 2013 le 4L Trophy c’est :
+    %ul
+      %li
+        plus de 2200 articles de presse écrite. 
+      %li
+        52 reportages télé.
+      %li
+        plus d’une centaine de passage radio.
+    A souligner également que plus de 60 tonnes de fournitures scolaires ont été acheminées par plus de 2000 participants.
+
+  %p
+    Depuis 15 ans c’est plus de 15000 enfants qui ont pu être scolarisés par l’apport de tout le matériel fourni par les étudiants car dès la première édition J.J Rey oblige l’apport de 50kg de matériel scolaire aux partici- pants. Desormais c’est ai minimum 2 cartables et 2 sacs de sports remplis de fournitures qui doivent ap- porter les participants pour prendre part au Raid.
