Add Youtube video

--- a/views/layout.haml
+++ b/views/layout.haml
@@ -44,6 +44,8 @@
         opacity: 0.8
         border-radius: 10px
         padding: 14px
+        .last
+          width: 585px
 
 %body
   #contain
@@ -101,8 +103,7 @@
         #absolute
           .span8
             #box.last
-              %h1
-                LIENS YOUTUBE
+              %iframe(width="585" height="300" src="//www.youtube.com/embed/95-ZkX2orqk" frameborder="0" allowfullscreen)
               
     #footer
       %p
