Plus que le montage et finish! :)

--- a/views/home.haml
+++ b/views/home.haml
@@ -1,4 +1,12 @@
+:sass
+  ul
+    li
+      list-style: disc
+
 #box
+  %h2
+    Présentation du 4L
+
   %p
     En 1996, Jean-Jacques Rey travaille dans le tourisme.
     %br
