--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,5 +1,4 @@
-* { margin:0; padding: 0; list-style: none; }
-body { font-family: Arial,Tahoma; color:#333; background: #eee; }
+body { font-family: Arial,Tahoma; color:#333; background: #FFF; margin: 0px;}
 
 #page { margin: 0 auto; width: 635px; background: #fff; padding-left:20px; padding-right:20px; padding-bottom:20px; padding-top: 14px; margin-top: 0px; margin-bottom: 0px; border: 1px solid #777; box-shadow: #999 1px 1px 3px; border-radius: 10px; opacity: 0.8 }
 #page h1 { font-weight: bold; font-size: 30.5px; letter-spacing: -2px; margin:0 0 20px 0; border-bottom: 1px solid #ddd; padding:0 0 10px 0; font-family:inherit; color:black; text-rendering:optimizelegibility }
