--- a/views/layout.haml
+++ b/views/layout.haml
@@ -1,126 +1,85 @@
 %head
-  %link(rel="stylesheet" type="text/css" href="/css/bootstrap.min.css")
   %link(rel="stylesheet" type="text/css" href="/css/skitter.styles.css")
   %link(rel="stylesheet" type="text/css" href="/css/styles.css")
-  %script(rel="stylesheet" type="text/javascript" href="/javascripts/bootstrap.min.js")
   %script(src="http://code.jquery.com/jquery-latest.min.js" type="text/javascript")
   %script(src="/javascripts/jquery-1.6.3.min.js" texte="javascript")
   %script(src="/javascripts/jquery.easing.1.3.js" texte="javascript")
   %script(src="/javascripts/jquery.skitter.min.js" texte="javascript")
   %script(src="/javascripts/slider.js" texte="javascript")
+  %script(src="/javascripts/menu.js" texte="javascript")
 
   %title
     4l trophy
 
   :sass
-    #contain
-      background-image: url('/img/lol.jpg')
-      background-repeat: no-repeat
-      background-position: 0 0
-      width: 1400px
-      height: 1000px
-      margin: 0 auto
+    #container
+      background-color: black
+      padding-bottom: 90px
       #header
-        text-align: center
-        padding-top: 5px
+        width: 1080px
+        margin: auto
+        padding-top: 10px
+        padding-bottom: 10px
+        position: relative
+        border-bottom: solid #FFF
         .title
-          margin-top: 10px
-      #container
-        .row
-          margin-top: 14px
-          #absolute
-            width: 720px
-            position: absolute
-            margin-left: 680px
-          .span8
-            margin-right: 20px
-      // #box_between
-      //   text-align: justify
-      //   margin-top: 40px
-      //   margin-left: 30px
-      //   color: black
-      //   background-color: white
-      //   opacity: 0.8
-      //   border-radius: 10px
-      //   padding: 14px
-      #box
-        text-align: justify
-        margin-left: 30px
-        color: black
-        background-color: white
-        opacity: 0.8
-        border-radius: 10px
-        padding: 14px
-        a
-          color: black
+          color: white
+          font-size: 20px
+          text-align: left
+          display: inline-block
+        .edition
+          color: white
+          font-size: 22px
+          font-weight: bold
+          right: 0px
+          bottom: 10px
+          position: absolute
+          display: inline-block
+          position: absolute
+      #contain
+        width: 960px
+        margin: auto
+        padding-top: 40px
+        .share
+          position: fixed
+          left: 0
+          top: 250px
+          background-color: #333
+          padding: 15px 10px
+          a
+            text-align: center
+            text-decoration: none
+            display: block
+            color: white
+            border-top: solid 1px #FFF
+            padding-bottom: 15px
+            padding-top: 15px
+            padding-left: 4px
+            padding-right: 4px
+            &:first-child
+              border-top: 0
+              margin-top: 0
+              padding-top: 15px
+            &:hover
+              background-color: #123
 
 %body
-  #contain
+  #container
     #header
-      %h1.title
-        The 4l Trophy
-
-    #container
-      .row
-        .span8
-          = yield
-        .span8
-          %div#page
-            %h1
-              Le 4l en image !
-            %div.content
-              %div.border_box
-                %div.box_skitter.box_skitter_large
-                  %ul
-                    %li
-                      %a(href="#iceCube")
-                        %img.cubeStop(src="/img/monture.png")
-                      %div.label_text
-                        %p
-                          La fidèle Monture
-                    %li
-                      %a(href="#cubeStop")
-                        %img.cubeStop(src="/img/desert.png")
-                      %div.label_text
-                        %p
-                          Le terrain de jeu ;)
-                    %li
-                      %a(href="#cube")
-                        %img.cube(src="/img/start.png")
-                      %div.label_text
-                        %p
-                          Go 4L Trophy !!!
-                    %li
-                      %a(href="#block")
-                        %img.block(src="/img/picture1.png")
-                      %div.label_text
-                        %p
-                          Solidarité !
-                    %li
-                      %a(href="#cubeRandom")
-                        %img.cubeRandom(src="/img/courage.png")
-                      %div.label_text
-                        %p
-                          Aller courage
-        / .span8
-        /   #box_between
-        /     %p
-        /       looooooooool
-      #lol
-        .row
-          .span8
-            #box
-              %a(href="http://youtu.be/tKVjrmceI1w" target="_blank")
-                %h2
-                  Notre Interview
-              %iframe(width="562" height="240" src="//www.youtube.com/embed/tKVjrmceI1w" frameborder="0" allowfullscreen)
-          #absolute
-            .span8
-              #box
-                %a(href="http://www.youtube.com/results?search_query=4l+trophy" target="_blank")
-                  %h2
-                    Pour voir toutes les vidéos clickez là
-                %iframe(width="562" height="240" src="//www.youtube.com/embed/95-ZkX2orqk" frameborder="0" allowfullscreen)
-              
-
-
+      .title
+        %h1
+          The 4l Trophy
+      .edition
+        %p
+          17ème Raid
+    #contain
+      .share
+        %a(href="#presentation")
+          Présentation
+        %a(href="#interview")
+          Notre interview
+        %a(href="#video")
+          Autre vidéo
+        %a(href="#images")
+          4L en images
+      = yield
