--- a/views/layout.haml
+++ b/views/layout.haml
@@ -6,7 +6,10 @@
   %script(src="/javascripts/jquery.easing.1.3.js" texte="javascript")
   %script(src="/javascripts/jquery.skitter.min.js" texte="javascript")
   %script(src="/javascripts/slider.js" texte="javascript")
-  %script(src="/javascripts/menu.js" texte="javascript")
+
+  %script(src="/javascripts/lancement.js" texte="javascript")
+  %script(src="/javascripts/localscroll/jquery.localscroll.js" texte="javascript")
+  %script(src="/javascripts/localscroll/jquery.scrollTo.js" texte="javascript")
 
   %title
     4l trophy
@@ -74,6 +77,8 @@
           17ème Raid
     #contain
       .share
+        %a(href="#header")
+          Acceuil
         %a(href="#presentation")
           Présentation
         %a(href="#interview")
