fixup! Add ScrollTo and clean files

--- a/views/layout.haml
+++ b/views/layout.haml
@@ -78,7 +78,7 @@
     #contain
       .share
         %a(href="#header")
-          Acceuil
+          Accueil
         %a(href="#presentation")
           Présentation
         %a(href="#interview")
