--- a/views/home.haml
+++ b/views/home.haml
@@ -66,7 +66,7 @@
 #video
   %a(href="http://www.youtube.com/results?search_query=4l+trophy" target="_blank")
     %h1
-      Pour voir toutes les vidéos clickez là
+      Pour voir toutes les vidéos clicez ici
   %iframe(width="862" height="540" src="//www.youtube.com/embed/95-ZkX2orqk" frameborder="0" allowfullscreen)
 
 #images
